--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,15 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.container {
+  max-width: 1200px;   
+  margin: 0 auto;
+  padding: 0 45px;
+}
